# py-minecraft-sync

./: .gitignore  compress.py  git.py  github.py  main.py  pyproject.toml  sync.py
p3tworld/: level.dat_old
p3tworld/DIM-1/entities/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
p3tworld/DIM-1/poi/: r.0.-1.mca
p3tworld/DIM-1/region/: r.-1.-1.mca  r.-1.0.mca  r.1.-1.mca  r.1.0.mca  r.2.-1.mca  r.2.0.mca
p3tworld/advancements/: 4f3fd992-9cb3-4b8a-99c8-3c48cb66d7da.json  b8a80d2a-ac51-4094-b837-36940a5199e6.json
p3tworld/entities/: r.0.-1.mca  r.0.-2.mca  r.0.-3.mca  r.0.0.mca  r.1.-1.mca  r.1.-2.mca  r.1.-3.mca  r.1.0.mca  r.2.-1.mca  r.2.-2.mca  r.2.-3.mca  r.2.0.mca  r.3.-1.mca  r.3.-2.mca  r.3.-3.mca  r.3.0.mca
p3tworld/playerdata/: 4f3fd992-9cb3-4b8a-99c8-3c48cb66d7da.dat_old  b8a80d2a-ac51-4094-b837-36940a5199e6.dat_old
p3tworld/poi/: r.1.-1.mca  r.1.-2.mca  r.1.-3.mca  r.1.0.mca  r.2.-1.mca  r.2.-2.mca  r.2.-3.mca  r.2.0.mca  r.3.0.mca
p3tworld/region/: r.-1.-1.mca  r.-1.0.mca  r.0.-3.mca  r.0.-4.mca  r.0.0.mca  r.0.1.mca  r.1.-4.mca  r.1.1.mca  r.2.-3.mca  r.2.-4.mca  r.2.1.mca  r.3.-1.mca  r.3.-2.mca  r.3.-3.mca  r.3.0.mca  r.3.1.mca
p3tworld/stats/: 4f3fd992-9cb3-4b8a-99c8-3c48cb66d7da.json  b8a80d2a-ac51-4094-b837-36940a5199e6.json
